# qtoggleserver-dallastemp

./: README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml  release.yml
qtoggleserver/dallastemp/: __init__.py  dallastemperaturesensor.py  ports.py
qtoggleserver/dallastemp/ports/: __init__.py  temperature.py
